k8s/chat-app-ab-in-bev/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ab-in-bev
spec:
  rules:
    - http:
        paths:
          - path: /messages/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: messages
                port:
                  number: 3000
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
          - path: /user/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
